# portent-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
scripts/: release.sh
src/portent/: bot.py  command_sync.py  config.py  logging_setup.py  requirements.txt
src/portent/assets/branding/: README.md
src/portent/cogs/: about.py  core.py  dice.py  fun.py
src/portent/utils/: assets.py
